--- a/app/assets/stylesheets/main/_breadcrumb.less
+++ b/app/assets/stylesheets/main/_breadcrumb.less
@@ -2,6 +2,7 @@
 // BREADCRUMB
 // -----------------------------------
 // author: mda@zenexity.com - 2011
+// updated: Ailuridaes - 2016
 // -----------------------------------
 
 #main > header {
@@ -24,13 +25,22 @@
             -webkit-border-image: url(/assets/images/breadcrumb-2.png) 0 30 0 20 stretch stretch;
             -moz-border-image: url(/assets/images/breadcrumb-2.png) 0 30 0 20 stretch stretch;
             border-image: url(/assets/images/breadcrumb-2.png) 0 30 0 20 stretch stretch;
+            border-style:solid;
             border-width: 0 30px 0 25px;
+            background: url(/assets/images/breadcrumb-2-bg.png);
+            -moz-background-clip:padding;
+            -webkit-background-clip:padding;
+            background-clip:padding-box;
             color: @titleColor;
             -webkit-user-select: text;
             &:nth-child(2) {
                 -webkit-border-image: url(/assets/images/breadcrumb-1.png) 0 30 0 1 stretch stretch;
                 -moz-border-image: url(/assets/images/breadcrumb-1.png) 0 30 0 1 stretch stretch;
                 border-image: url(/assets/images/breadcrumb-1.png) 0 30 0 2 stretch stretch;
+                background: url(/assets/images/breadcrumb-1-bg.png);
+                -moz-background-clip:padding;
+                -webkit-background-clip:padding;
+                background-clip:padding-box;
             }
             &:first-child {
                 padding-left: 20px;
@@ -107,4 +117,3 @@
         }
     }
 }
-
