--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -4,7 +4,7 @@
     <head>
         <title>Zentasks</title>
         <link rel="stylesheet" type="text/css" media="screen" href="@routes.Assets.versioned("stylesheets/main.css")">
-        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/jquery-1.7.1.js")"></script>
+        <script type="text/javascript" src="@routes.Assets.versioned("javascripts/jquery-1.7.1.min.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/jquery-play-1.7.1.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/underscore-min.js")"></script>
         <script type="text/javascript" src="@routes.Assets.versioned("javascripts/backbone-min.js")"></script>
